--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="index.css">
+</head>
 <body>
-    <div class="name"></div>
+    <div class="chore-reminder">
+        <h1 class="name"></h1>
+
+        <div class="incoming">
+            <div class="incoming-block">
+                <div class="next-week"></div>
+                <div class="next-week-name"></div>
+            </div>
+
+            <div class="incoming-block">
+                <div class="two-weeks-from-now"></div>
+                <div class="two-weeks-from-now-name"></div>
+            </div>
+
+            <div class="incoming-block">
+                <div class="three-weeks-from-now"></div>
+                <div class="three-weeks-from-now-name"></div>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
